# DeZer0

./: .gitignore  BUILD_OPTIONS.md  EXAMPLE_TOOL_MANIFEST.json  EXAMPLE_TOOL_SCRIPT.py  HARDWARE_CONFIG.md  HARDWARE_CONFIG_ARCHITECTURE.txt  HARDWARE_CONFIG_INTEGRATION.md  HARDWARE_CONFIG_SUMMARY.md  PIN_MAPPING_FLOW.md  QUICKSTART.md  README.md  build_firmware.py  build_with_docker.py  create_fs.py
.github/workflows/: build-firmware.yml  build-mobile-app.yml  release-firmware.yml
DeZer0/: platformio.ini
DeZer0/assets/: logo_bitmap.h
DeZer0/payloads/: attack_script_1.json
DeZer0/src/: ble_comms.cpp  ble_comms.h  main.ino  menu_ui.cpp  menu_ui.h  wifi_tools.cpp  wifi_tools.h
ESP/: .gitignore  boot.py  main.py
dezero_app/: README.md  pubspec.yaml
dezero_app/lib/: ble_service.dart  loading_screen.dart  main.dart  main_screen.dart  passcode_screen.dart
dezero_app/web/: index.html  (+1 more)
esp32_firmware/main/: CMakeLists.txt
esp32_firmware/main/builtins/: ble_scanner.cpp  ble_scanner.h  wifi_scanner.cpp
esp32_firmware/main/communication/: ble_server.h
esp32_firmware/main/core/: plugin_manager.cpp  storage_manager.cpp
esp32_firmware/main/hal/: display_api.h  gpio_api.h
esp32_firmware/main/include/: payload_api.h  types.h
esp32_firmware/main/runtimes/: native_loader.h
firmware/: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  README.md  boot.py  main.py  partitions.csv  sdkconfig.defaults
mobile/: .gitignore  PAYLOAD_MANAGEMENT.md  pubspec.yaml
web/: vercel.json
web_flasher/: .gitignore  BLOB_CACHE_SETUP.md  README.md  package-lock.json  package.json
(+98 files in other folders)
